# c-library-template

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml
include/: c_library_template.h
src/: main.c  main.cpp
test/: test_main.cpp
